--- a/ITIS3135/styles/default.css
+++ b/ITIS3135/styles/default.css
@@ -15,12 +15,16 @@ a:hover{
 }
 
 main{
-    text-align: left;
+    text-align: center;
     margin-left: 20%;
     margin-right: 20%;
 }
 
 h2{
+    text-align: center;
+}
+
+h3{
     text-align: center;
 }
 
