--- a/ITIS3135/components/footer.html
+++ b/ITIS3135/components/footer.html
@@ -12,6 +12,7 @@
     <a href="https://www.linkedin.com/in/christopher-demarchi-30a5961a0/">LinkedIn</a>
 </nav>
 <p>Page Built by <a href="demarchidesigns.net/">DeMarchi Designs</a>&copy;2024</p>
+<p><strong><em>Adventure Awaits on Every Wave.</em></strong></p>
 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
    </a>
