--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -13,6 +13,8 @@
             <a href="firstscripts.html">First Java Scripts</a>
             ||
             <a href="website_evaluations.html">Website Evaluations</a>
+            ||
+            <a href="about.html">About Page</a>
         </nav>
         <nav>
             <a href="stuff/RANDO MNAME~THING.htm">CRAPPY</a>
