--- a/ITIS3135/styles/default.css
+++ b/ITIS3135/styles/default.css
@@ -58,3 +58,23 @@ th {
 caption {
     font-weight: bold; /* Makes caption text bold */
 }
+
+@media screen and (min-width: 981px) and (max-width: 1400px) {
+    main {
+        max-width: 90%; /* Adjust as needed */
+    }
+}
+
+/* Rule Overrides For Tablet Devices */
+@media screen and (min-width: 601px) and (max-width: 980px) {
+    main {
+        max-width: 95%; /* Adjust as needed */
+    }
+}
+
+/* Rule Overrides For Mobile Devices */
+@media screen and (min-width: 370px) and (max-width: 600px) {
+    main {
+        max-width: 100%; /* Adjust as needed */
+    }
+}
