--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -17,6 +17,8 @@
             <a href="about.html">About Page</a>
             ||
             <a href="byo_intro.html">BYO Intro</a>
+            ||
+            <a href="calculator_try.html">Calculator Try</a>
         </nav>
         <nav>
             <a href="stuff/RANDO MNAME~THING.htm">CRAPPY</a>
