--- a/ITIS3135/components/footer.html
+++ b/ITIS3135/components/footer.html
@@ -13,6 +13,7 @@
 </nav>
 <p>Page Built by <a href="demarchidesigns.net/">DeMarchi Designs</a>&copy;2024</p>
 <p><strong><em>"Adventure Awaits on Every Wave."</em></strong></p>
+<button type = "button" onclick = 	"document.querySelectorAll('link[rel=stylesheet]').forEach(function(e)	{e.setAttribute('href', '');});">No CSS</button>
 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
     <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
    </a>
