created and finished midterm

--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -24,4 +24,6 @@
         </nav>
         <nav>
             <a href="stuff/RANDO MNAME~THING.htm">CRAPPY</a>
+            ||
+            <a href="hobby/index.html">Hobby</a>
         </nav>
