--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -21,6 +21,8 @@
             <a href="calculator_try.html">Calculator Try</a>
             ||
             <a href="arrays.html">Arrays</a>
+            ||
+            <a href="drawing.html">Drawing</a>
         </nav>
         <nav>
             <a href="stuff/RANDO MNAME~THING.htm">CRAPPY</a>
