finished project overview

--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -28,4 +28,6 @@
             <a href="stuff/RANDO MNAME~THING.htm">CRAPPY</a>
             ||
             <a href="hobby/index.html">Hobby</a>
+            ||
+            <a href="project/project_overview.html">Project Overview</a>
         </nav>
