--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -29,5 +29,5 @@
             ||
             <a href="hobby/index.html">Hobby</a>
             ||
-            <a href="project/index.html">Project Overview</a>
+            <a href="project/index.html">Client Project</a>
         </nav>
