--- a/ITIS3135/components/header.html
+++ b/ITIS3135/components/header.html
@@ -23,6 +23,10 @@
             <a href="arrays.html">Arrays</a>
             ||
             <a href="drawing.html">Drawing</a>
+            ||
+            <a href="review1.html">Review 1</a>
+            ||
+            <a href="review2.html">Review 2</a>
         </nav>
         <nav>
             <a href="stuff/RANDO MNAME~THING.htm">CRAPPY</a>
