--- a/ITIS3135/project/components/header.html
+++ b/ITIS3135/project/components/header.html
@@ -1,4 +1,4 @@
-<h1>Chris DeMarchi's Colorful Dandan || ITIS 3135 </h1>
+<h1>Bella Brown's Portfolio </h1>
         <nav>
             <a href="./">Home</a>
             ||
